# book_library

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml  streamlit_app.py  streamlit_main.py  test.py  test_author copy.ipynb  test_embedding.ipynb
src/: populate_authors.py  populate_books.py  populate_embeddings.py
src/agent/: agent.py
src/agent/prompts/: __init__.py  author_bio.txt  author_info.txt
src/agent/tools/: __init__.py  wikipedia_tool.py
src/book_api/: __init__.py  google_books.py
src/database/: db.py
src/database/sql/: author_details.sql  books_by_author.sql  books_by_category.sql  books_by_language.sql  books_by_publisher.sql  books_publication_timeline.sql  books_with_multiple_authors.sql  books_without_authors.sql  books_without_categories.sql  category_statistics.sql  library_summary.sql  longest_books.sql  most_prolific_authors.sql  query.sql  test.sql
src/logger/: __init__.py  logger_config.py
src/models/: _utils.py  agent.py  agent_models.py  google_books.py  google_sheet.py  ollama_models.py  project_paths.py
src/streamlit_app/plots/: authors_plots.py  books_plot.py  overview_plots.py
src/streamlit_app/stramlit_pages/: overview.py
src/streamlit_app/streamlit_queries/authors/: authors.sql  search_authors.sql
src/streamlit_app/streamlit_queries/books/: language_count.sql  search_books.sql
src/streamlit_app/streamlit_queries/categories/: categories_count.sql
src/streamlit_app/streamlit_queries/overview/: books_by_category.sql  most_represented_authors.sql  summary_statistics.sql
tests/models/: test_project_settings.py
