[project]
name = "book-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "nbformat>=4.2.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.2.1",
    "pydantic-ai-slim[duckduckgo]>=1.2.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "umap-learn>=0.5.11",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
